--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,8 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+# 모델 파일은 Git에 올리지 않기
+model_emotion_quantized.pt
+model_intent_v2_quantized.pt
+*.pt
